= Release-Notes



== 2.2.1 (SNAPSHOT)

* Adressvergleich kommt jetzt mit mehr Sonderfällen klar


== 2.2 (27-Feb-2019)

* NULL-Objekte für die Initialisierung von Variablen
* Architektur-Dokumentation aktualisert
* Text-Klasse um `equalsIgnore`...`Umlaute(..)` ergänzt 


== 2.1 (20-Feb-2019)

* Logischer Vergleich bei Klassen im post-Package:
  Beim Vergleich von Adresse Ort und Strasse müssen sie nicht mehr exakt uebereinstimmen.
  So werden "73730 Esslingen, Badstr. 5" und "73730 Esslingen/N, Badstrasse 5" als die gleiche Adresse angesehen.
  _Achtung_: dieses Verhalte ist bis Version 2.0 anders - hier muss die Adresse exakt übereinstimmen.
* Will man den Vergleich exakt, gibt es dazu in diesen Klassen eine "equalsExact"-Methode.


== 2.0 (9-Feb-2019)

* Fachwerte mit String-Attributen wurden überarbeitet, um den Speicherbedarf zu reduzieren (Vermeidung von String-Duplikaten)
* beim Aufruf der of()-Methode werden Duplikate ebenfalls vermieden
* #_neu_#: formular-Package
* Methoden, die als @deprecated gekennzeichnet sind, wurden entfernt.



== 1.1 (16-Dez-2018)

* med-Package für Klassen aus dem Krankenkassen-Bereich eingeführt
* Text-Klasse kann jetzt auch die http://rosettacode.org/wiki/Levenshtein_distance[Levenshtein-Distanz] berechnen
* Bereitstellung von of()-Methoden auch in der Geldbetrag-Klasse
* API der Geldbetrag-Klasse an die Money-Klasse aus der Referenz-Implemntierung (org.javamoney.moneta)
* #_neu_#: Reduktion des Speicherbedarfs der Waehrung-Klasse und Performance-Optimierung (Laufzeit des TCKs von 50 Sek. auf ca. 3 Sek. reduziert)



== 1.0 (22-Sep-2018)

* #_neu_#: Unterstützung von http://javamoney.github.io/api.html[JSR-354] (Money und Currency API) durch eine Geldbetrag- und Waehrung-Klasse.
  Ziel ist es, den schwierigen Umgang mit Geldbeträgen zu vereinfachen.
  Bis auf https://github.com/JavaMoney/jsr354-tck/issues/18[einen Test] wird das https://github.com/JavaMoney/jsr354-tck[JSR354-TCK] eingehalten.